--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <title>Angular QuickStart</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://bootswatch.com/darkly/bootstrap.min.css">
     <base href="/">
     <link rel="stylesheet" href="styles.css">
 
